--- a/python_blockchain.ipynb
+++ b/python_blockchain.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PythonによるBlockchainの実装\n",
-    "\n",
+    "# PythonでBlockchainの実装\n",
     "- [Bitcoin論文](https://bitcoin.org/bitcoin.pdf)をもとにblockchainの実装をする\n",
     "    - 天下り的にならないよう，徐々にシステムをパワーアップさせていく方針で作る\n",
     "- 目標はシンプルなコンセンサスアルゴリズムの実装まで行い，ノード同士が競ってマイニングする様子を眺めること\n",
@@ -19,7 +18,7 @@
    "metadata": {},
    "source": [
     "# 信用のある第三者を介する取引\n",
-    "- まずは第三者を介した取引を行う\n",
+    "- まずは第三者を介した取引をシミュレーションしてみる\n",
     "- 第三者は取引の公正さのすべてを請け負う"
    ]
   },
@@ -71,26 +70,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Transaction(sender_address=1, receiver_address=2, value=5)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Transaction(1,2,5)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -137,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: シンプルな取引\n",
+    "## デモ: シンプルな取引\n",
     "- AliceとBobが取引する様子をデモする"
    ]
   },
@@ -173,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 例えば第三者の信頼度がちょっと落ちたとする\n",
+    "- ここで例えば，第三者の信頼度がちょっと落ちたとする\n",
     "    - 取引内容の改ざんはどのように防げばよいだろうか?"
    ]
   },
@@ -181,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 公開鍵暗号(電子署名)を用いたtransactionの発行\n",
+    "# 電子署名を用いたtransactionの発行\n",
     "- senderはtransactionに電子署名を行う\n",
     "    - 今回はRSAを用いることにする\n",
     "        - BitCoinは[ECDSA](https://en.bitcoin.it/wiki/Transaction#Input)を用いている\n",
@@ -194,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## transactionの改良 - 電子署名フィールドの追加\n",
+    "## Transactionの改良 - 電子署名フィールドの追加\n",
     "- 電子署名できるようにする\n",
     "    - `sign`を追加\n",
     "    - 署名の際，transactionをstrで表すための`str_data` methodも追加\n",
@@ -266,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- pycryptoのkey instanceをstrに変換するhelper function\n",
+    "- pycryptoのkey instanceをstrに変換するhelper functionを実装する\n",
     "    - strにしておく理由は後ほどわかる"
    ]
   },
@@ -360,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: RSAを用いたtransactionの発行とチェック\n",
+    "## デモ: RSAを用いたtransactionの発行とチェック\n",
     "先ほどと同じようにデモをしてみる"
    ]
   },
@@ -454,18 +433,19 @@
    "source": [
     "- transactionの改竄リスクを低減することができた \n",
     "    - しかし依然として，**double-spending problem** を防ぐには信頼のある第三者が必要となる\n",
-    "    - これはデータで通貨を作る際の最も大きな障害(データは簡単にコピーできる)\n",
-    "- すべてのtransactionが公開されていれば，double-spendingは防げるのでは？"
+    "    - これはデータで通貨を作る際の最も大きな障害だった(データは簡単にコピーできるから)\n",
+    "- すべてのtransactionが公開されていれば，double-spendingは防げるのでは？\n",
+    "    - 公開されていればreceiverも記録をチェックできる"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Blockchain によるTransactionの公開\n",
+    "# Timestamp Server によるTransactionの公開\n",
     "- いくつかのtransactionをまとめて，timestampをつけ，**block**で公開することを考える\n",
     "    - 信頼のある**timestamp server**がtransactionをまとめてtimestampをつけ，電子署名をして公開する\n",
-    "    - ある特定の時間にそのtransactionが存在したことが保証される\n",
+    "    - ある特定の時刻にそのtransactionが存在したことが保証される\n",
     "- さらに，blockには直前のtimestampのhashを含め，**blockchain**を作る\n",
     "    - blockを改ざんすると，以降のblockは全て不正なものとなる\n",
     "- これでtransactionをチェックしてdouble-spendingを防ぐ第三者は必要なくなった\n",
@@ -493,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +494,7 @@
     "        dct[\"transactions\"]=tuple([Transaction.json_loads(t) for t in dct[\"transactions\"]])\n",
     "        return cls(**dct)\n",
     "        \n",
-    "    def hash(self): \n",
+    "    def hash(self) -> str: \n",
     "        block_bytes=self.json_dumps().encode()\n",
     "        return hashlib.sha256(block_bytes).hexdigest()"
    ]
@@ -524,10 +504,11 @@
    "metadata": {},
    "source": [
     "## Timestamp Serverの実装\n",
-    "1. transactionのリストを受け取る\n",
-    "2. 一つ前のblockのhashとtimestampをつけてBlockにまとめる\n",
-    "3. **電子署名**をする\n",
-    "4. 公開する"
+    "- timestamp serverは以下の流れで**blockchain**を作る\n",
+    "    1. transactionのリストを受け取る\n",
+    "    2. 一つ前のblockのhashとtimestampをつけてBlockにまとめる\n",
+    "    3. **電子署名**をする\n",
+    "    4. 公開する"
    ]
   },
   {
@@ -542,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: Timestamp server による Blockの公開とBlockChainへの登録\n",
+    "## デモ: Timestamp server による Blockの公開とBlockChainへの登録\n",
     "- timestamp serverをつくる"
    ]
   },
@@ -728,8 +709,8 @@
     "# Proof-of-Workの実装\n",
     "- これがblockchainの革新的要素\n",
     "- 先程は\"信頼の置ける\" timestamp serverの電子署名が，Blockの正当性を保証していた\n",
-    "- では誰でも同じ署名ができれば誰でもtimestamp serverの仕事ができるのでは?\n",
-    "    - 電子署名でやると，当然ブロックの正当性の証明にはならない\n",
+    "- では誰でも同じ署名ができれば，誰でもtimestamp serverの仕事ができるのでは?\n",
+    "    - 電子署名でやると，当然ブロックの正当性の証明にはならない..\n",
     "- **[HashCash](https://en.bitcoin.it/wiki/Hashcash)**を用いる"
    ]
   },
@@ -737,9 +718,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## blockにnonceを加える\n",
+    "## Blockにnonceを加える\n",
     "- これがtimestamp serverの電子署名の代わりとなる\n",
-    "    - しかも誰でもつけることができる!\n",
     "- blockのハッシュ値が適当な条件を満たすように**nonce**を追加する\n",
     "    - 例えば上4桁が0\n",
     "    - この制約を**difficulty**と呼ぶ\n",
@@ -748,7 +728,7 @@
     "    - 今回はdifficultyは固定にする\n",
     "- nonceを見つける作業が**mine**\n",
     "    - nonceを見つけるのは難しい(たくさん試して，あたりを引くしかない)\n",
-    "    - これによって\"block\"の生成を非常に高コストにすることができる\n",
+    "    - これによってblockの生成を非常に高コストにすることができる\n",
     "    - nonceが正しいことを確認するのは簡単\n",
     "        - 電子署名と同様, 正当性の確認が簡単に行える\n",
     "- **mine**は誰でも行える"
@@ -763,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,12 +836,12 @@
    "metadata": {},
    "source": [
     "- BlockChainもちょっと改良\n",
-    "    - strに変換するmethodをつける"
+    "    - 自身をstrに変換するmethodをつける"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,12 +857,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo4: tranasctionの発行からminingまで"
+    "## デモ: tranasctionの発行からminingまで"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,11 +944,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NodeとNetworkとConsensus Algorithm\n",
+    "# NodeとConsensus Algorithm\n",
     "- 前回までで分散管理の準備は整った\n",
     "- 具体的にblockchainをつくる**node**を実装する\n",
     "- nodeやsender, receiverが集まって**network**を形成する\n",
-    "- networkの動きは以下のようになる ([@Nakamoto2018](www.bitcoin.org))"
+    "- networkの動きは以下のようになる"
    ]
   },
   {
@@ -978,7 +958,7 @@
     "1. senderがtransaction生成．なるべく多くのnodeにbroadcastする\n",
     "2. nodeはtransactionを集めてblockにまとめる\n",
     "3. mine\n",
-    "4. mineが終わったら，他のnodeにblockをbroadcastする\n",
+    "4. 他のnodeにマイニングしたblockをbroadcastする\n",
     "5. blockを受け取ったnodeは，blockの正当性を確認し，double-spendingのチェックをする\n",
     "6. チェックが通れば，次のblockの作成を始める"
    ]
@@ -990,7 +970,7 @@
     "- Nodeが複数いて，異なるBlockChainを持つときは，どのように正しさを判断するか？\n",
     "    - **Consensus Algorithm**\n",
     "    - 最も長いblockchainを，最も正しいblockchainとみなす\n",
-    "        - なぜなら，chainがながければ長いほど，多くの計算資源が注ぎ込まれたことになるから\n",
+    "        - なぜなら，chainが長ければ長いほど，多くの計算資源が注ぎ込まれたことになるから\n",
     "        - 多数決ではなく，**one-CPU-one-vote**"
    ]
   },
@@ -1018,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,8 +1104,7 @@
     "- 全体的に，networkの作業が追加されている\n",
     "- mineを少し変更している\n",
     "    - 複数のnodeが同じ方法でマイニングをするのは無駄が生じる可能性がある\n",
-    "        - 例えば全く同じBlockのマイニングを複数のノードが開始した場合，確実に最も計算力の高いnodeがマイニングを成功させることになる\n",
-    "        - timestampがちょっとずれればこれはおこらないが，，，"
+    "        - 例えば全く同じBlockのマイニングを複数のノードが開始した場合，確実に最も計算力の高いnodeがマイニングを成功させることになる"
    ]
   },
   {
@@ -1138,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,12 +1150,13 @@
     "- networkっぽいものを実装する\n",
     "    - Network classを中継点としてデータの遣り取りをする\n",
     "- あとでmultiprocessでノードを動かすために，データの管理はmultiprocess.managerで行う\n",
+    "- flaskとかで作っても面白いかもしれない\n",
     "- 本質的でないので読み飛ばして良い"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo: ノード1つの場合のテスト"
+    "## ノード1つの場合のテスト"
    ]
   },
   {
@@ -1317,7 +1297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo: 分散blockchainのデモ\n",
+    "# デモ: 分散blockchainのデモ\n",
     "- multiprocessingでnetworkのデモを行う"
    ]
   },
@@ -1336,7 +1316,7 @@
    "metadata": {},
    "source": [
     "- node生成\n",
-    "- 適当にnum_nodesを変更して遊ぶ"
+    "- 適当にnum_nodesを変更して遊ぶと良い"
    ]
   },
   {
@@ -1421,9 +1401,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### blockchain check\n",
+    "### blockchain の表示\n",
     "- 各ノードの持つblockchainがどの様になっているのか表示する\n",
-    "- 別Processで行う"
+    "- 別Processで行う\n",
+    "    - Jupyterは賢いのでoutputにきちんと表示してくれる"
    ]
   },
   {
@@ -1469,7 +1450,8 @@
    "metadata": {},
    "source": [
     "- 取引をして遊ぶ\n",
-    "- 上の表示が変化する!"
+    "    - ランダムに取引が行われるコードを書いてみる\n",
+    "    - 上の表示が変化する!"
    ]
   },
   {
@@ -1498,7 +1480,7 @@
    "metadata": {},
    "source": [
     "- networkをちょと変えて遊んで見る\n",
-    "- ちょっと断線させる"
+    "    - ちょっと断線させる"
    ]
   },
   {
@@ -1545,7 +1527,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "以上"
+    "# おわりに\n",
+    "- 本物のBitCoinとは異なる部分がたくさんあります\n",
+    "\n",
+    "# 参考文献\n",
+    "- [Bitcoin white paper](https://bitcoin.org/bitcoin.pdf)\n",
+    "    - 専門外でも読みやすいです\n",
+    "- [Bitcoin Wiki](https://en.bitcoin.it/wiki/Main_Page)\n",
+    "    - 非常に情報量が多いです"
    ]
   }
  ],
